solo faltan colores a la grafica

--- a/src/app/complex/complex.component.html
+++ b/src/app/complex/complex.component.html
@@ -73,7 +73,7 @@
         </ul>
       </div>
       <div class="col-8">
-        <canvas id="grafica"> {{chart}} </canvas>
+        <app-line-chart [z1s]="z1s" [z2s]="z2s" [suma]="suma" [multi]="multi" [div]="div" [root]="root" [pow]="pow" [exp]="exp" [sin]="sin" [cos]="cos" [tan]="tan"></app-line-chart>
       </div>
     </div>
 </div>
