--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,21 @@
-<app-complex></app-complex>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" routerLink="/">Complejos</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact:true }">Calculadora</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/circunferencia" routerLinkActive="active">Circunferencia</a>
+            </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
 
 <router-outlet></router-outlet>
