--- a/src/app/complex/complex.component.html
+++ b/src/app/complex/complex.component.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="col-2">
-        <button type="button" class="btn btn-outline-dark btn-lg" id="btnc" (click)="calcular()">Calcular</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btnc" id="btnc" (click)="calcular()">Calcular</button>
       </div>
     </div>
     <div class="row" *ngIf="dataok; else elseBlock">
