--- a/src/app/bubble-chart/bubble-chart.component.html
+++ b/src/app/bubble-chart/bubble-chart.component.html
@@ -1,5 +1,6 @@
 <canvas baseChart class="formc" width="650" height="650"
     [options]="bubbleChartOptions"
+    [data]="bubbleChartData"
     [legend]="true"
     [type]="'bubble'">
 </canvas>
