--- a/src/app/circunferencia/circunferencia.component.html
+++ b/src/app/circunferencia/circunferencia.component.html
@@ -47,7 +47,7 @@
             Primero punto: <mark>{{p2[0].toFixed(3)+'+('+p2[1].toFixed(3)+')i' }}</mark>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-start">
-            Ecuación ordinaria de la circunferencia invertida: <mark>{{'(x-('+ci[0].toFixed(3)+'))^2+(y-'+ci[1].toFixed(3)+'))^2='+ci[2].toFixed(3)+'^2' }}</mark>
+            Ecuación ordinaria de la circunferencia invertida: <mark>{{'(x-('+ci[0].toFixed(3)+'))^2+(y-('+ci[1].toFixed(3)+'))^2='+ci[2].toFixed(3)+'^2' }}</mark>
           </li>
         </ul>
       </div>
