--- a/src/app/circunferencia/circunferencia.component.html
+++ b/src/app/circunferencia/circunferencia.component.html
@@ -38,13 +38,13 @@
       <div class="col-4">
         <ul class="list-group list-group-flush">
           <li class="list-group-item d-flex justify-content-between align-items-start">
-            Primero punto: <mark>{{p1[0].toFixed(3)+'+('+p1[1].toFixed(3)+')i' }}</mark>
+            Primer punto: <mark>{{p1[0].toFixed(3)+'+('+p1[1].toFixed(3)+')i' }}</mark>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-start">
-            Primero punto: <mark>{{p2[0].toFixed(3)+'+('+p2[1].toFixed(3)+')i' }}</mark>
+            Segundo punto: <mark>{{p2[0].toFixed(3)+'+('+p2[1].toFixed(3)+')i' }}</mark>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-start">
-            Primero punto: <mark>{{p2[0].toFixed(3)+'+('+p2[1].toFixed(3)+')i' }}</mark>
+            Tercer punto: <mark>{{p2[0].toFixed(3)+'+('+p2[1].toFixed(3)+')i' }}</mark>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-start">
             Ecuación ordinaria de la circunferencia invertida: <mark>{{'(x-('+ci[0].toFixed(3)+'))^2+(y-'+ci[1].toFixed(3)+'))^2='+ci[2].toFixed(3)+'^2' }}</mark>
